--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,11 @@
     <title>GrseAcademy</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://www.flaticon.com/svg/static/icons/svg/3602/3602656.svg"
+    />
   </head>
   <body>
     <app-root></app-root>
