Реализован футер полностью и мини обновления навигационной панели

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" class="h-100">
   <head>
     <meta charset="utf-8" />
     <title>Grse Academy</title>
@@ -11,7 +11,7 @@
       href="https://www.flaticon.com/svg/static/icons/svg/3602/3602656.svg"
     />
   </head>
-  <body>
+  <body class="h-100">
     <app-root></app-root>
   </body>
 </html>
